--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,38 @@ body{
   color: hsl(300, 43%, 22%);
 }
 
-/*text*/
+/*elements*/
 
+.card{
+  background-color: hsl(300, 43%, 22%);
+  color: white;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 2.5rem 2rem;
+  border: none;
+  border-radius: 8px;
+  width: 22rem;
+}
 
+.card .cardheading{
+  display: block;
+  margin-left: 1.2rem;
+  position: relative;
+  bottom: .5rem;
+}
+
+.card .verified{
+  color:hsl(333, 80%, 67%);
+  position: relative;
+  bottom: .8rem;
+}
+
+.card img{
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.card p{
+  line-height: 1.8rem;
+}
