--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,8 +5,7 @@ body{
   color: hsl(300, 43%, 22%);
 }
 
-/*elements*/
-
+/*card*/
 .card{
   background-color: hsl(300, 43%, 22%);
   color: white;
@@ -39,4 +38,27 @@ body{
 
 .card p{
   line-height: 1.8rem;
+}
+
+/*rating*/
+
+.rating{
+  background-color: hsl(300, 24%, 96%);
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+  border: none;
+  border-radius: 8px;
+  width: 28rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.rating h4{
+  font-size: 1.2rem;
+}
+
+.rating img{
+  width: 1rem;
+  height: 1rem;
 }
