--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,28 @@ body{
   font-size: 15px;
   font-family: "League Spartan";
   color: hsl(300, 43%, 22%);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  padding: 2rem 3rem;
+}
+
+/*text*/
+.text{
+  width: 26rem;
+}
+
+.text h1{
+  font-size: 3rem;
+  font-weight: 700;
+  line-height: 3rem;
+}
+
+.text p{
+  font-size: 1.2rem;
+  line-height: 2rem;
 }
 
 /*card*/
@@ -40,6 +62,18 @@ body{
   line-height: 1.8rem;
 }
 
+#firstRating{
+  margin-left: 14rem;
+}
+
+#secondRating{
+  margin-left: 18rem;
+}
+
+#thirdRating{
+  margin-left: 22rem;
+}
+
 /*rating*/
 
 .rating{
@@ -50,7 +84,7 @@ body{
   border: none;
   border-radius: 8px;
   width: 28rem;
-  padding-left: 1rem;
+  padding-left: 3rem;
   padding-right: 1rem;
 }
 
@@ -61,4 +95,10 @@ body{
 .rating img{
   width: 1rem;
   height: 1rem;
+}
+
+.reviews{
+display: flex;
+flex-direction: column;
+gap: 1rem;
 }
